<resources>
    <string name="app_name">FindAFive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_match">Add a Match</string>
    <string name="menu_about">About Us</string>
    <string name="select_location">Select Location</string>
    <string name="date_and_time">Date and Time</string>
    <string name="amount_of_players">Amount of Players</string>
    <string name="team_logo">Team Logo</string>
    <string name="add_match">Add Match</string>
    <string name="input_Name">Name</string>
    <string name="input_date">Date</string>
    <string name="input_height">Height Dropped</string>
    <string name="start_button">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>