<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_about">

    <fragment
        android:id="@+id/nav_home"
        android:name="ie.wit.findafive.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="ie.wit.findafive.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_add_match"
        android:name="ie.wit.findafive.ui.add_match.AddMatchFragment"
        android:label="@string/menu_add_match"
        tools:layout="@layout/fragment_add_match" />
</navigation>